// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly as converging gateway with minimal props 1`] = `
<Fragment>
  <Component
    editMenu={[Function]}
    elementTypeClassName="gateway-element converging"
    onClick={[Function]}
    referenceElement={ConvergingGatewayNode { "followingElement": undefined }}
  />
  <div
    className="stroke-horizontal optional"
  />
</Fragment>
`;

exports[`renders correctly as diverging gateway with minimal props 1`] = `
<Fragment>
  <Component
    editMenu={[Function]}
    elementTypeClassName="gateway-element diverging"
    onClick={[Function]}
    referenceElement={DivergingGatewayNode { "id": "gateway-id" }}
  />
  <HorizontalStroke
    editMenu={[Function]}
    onSelect={[Function]}
    referenceElement={DivergingGatewayNode { "id": "gateway-id" }}
  >
    text
  </HorizontalStroke>
</Fragment>
`;
